Se actualiza Html con una Imagen

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <div class="app">
         <h4 class="mb-4">TODO App</h4>
+        <img src="./alicates-de-corte-aislados-en-blanco-.png"
+             height="30"
+             alt="imagen de prueba" />
         <div id="addNew" data-bs-toggle="modal" data-bs-target="#form">
             <span>Add New Task</span>
             <i class="fa-regular fa-plus"></i>
