Se corrige la ruta de la imagen

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="app">
         <h4 class="mb-4">TODO App</h4>
-        <img src="./alicates-de-corte-aislados-en-blanco-.png"
+        <img src="alicates-de-corte-aislados-en-blanco-.png"
              height="30"
              alt="imagen de prueba" />
         <div id="addNew" data-bs-toggle="modal" data-bs-target="#form">
